[gd_scene load_steps=4 format=3 uid="uid://d20syy7234wp6"]

[ext_resource type="Script" path="res://addons/sxgd/nodes/debug/SxNodeTracer/SxNodeTracer.gd" id="1"]
[ext_resource type="Script" path="res://kitchen-sink/TestSxNodeTracer.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://fnws5nw1m5se" path="res://addons/sxgd/assets/textures/icon.png" id="3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(203, 277)
texture = ExtResource("3")

[node name="NodeTracer" type="Node" parent="Sprite"]
script = ExtResource("1")

[node name="Sprite2" type="Sprite2D" parent="."]
modulate = Color(0.164706, 0.8, 0.831373, 1)
position = Vector2(828, 277)
texture = ExtResource("3")

[node name="NodeTracer" type="Node" parent="Sprite2"]
script = ExtResource("1")

[node name="Sprite3" type="Sprite2D" parent="."]
modulate = Color(0.164706, 0.8, 0.831373, 1)
position = Vector2(511, 486)
texture = ExtResource("3")

[node name="NodeTracer" type="Node" parent="Sprite3"]
script = ExtResource("1")

[node name="Sprite4" type="Sprite2D" parent="."]
modulate = Color(0.164706, 0.8, 0.831373, 1)
position = Vector2(507, 106)
texture = ExtResource("3")

[node name="NodeTracer" type="Node" parent="Sprite4"]
script = ExtResource("1")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -15.5
offset_right = 82.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Show node tracer UI"

[connection signal="pressed" from="Button" to="." method="_show_panel"]
